Bugfix: removes all horizontal scroll bars

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,5 +2,4 @@
 
 #page-container {
   height: calc(100vh - 15%);
-  width: 100vw;
 }
